# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yaml  initialize-template.yaml  template.yaml
REPO_NAME/: __init__.py
__REPO_NAME__/: __init__.py
tests/: test_base.py
